<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">XLDownloadTest</string>
    <string name="Title">请选择下载任务来源</string>
    <string name="action_settings">Settings</string>
    <string name="radioButton1">Market(1000)</string>
    <string name="radioButton2">Http(16000)</string>
    <string name="radioButton3">Magnet(10048)</string>
    <string name="radioButton4">Https(1000)</string>
    <string name="radioButton5">Ftp(414)</string>
    <string name="radioButton6">TestUrl(55)</string>
    <string name="radioButton7">AD(455)</string>
    <string name="button">运行</string>
    <string name="placeHolder">请输入任务条数</string>

</resources>
